<resources>
    <string name="app_name">Записки на полях</string>
    <string name="fab_main_name">Добавить заметку</string>
    <string name="text_view_name">Укажите наименование заметки</string>
    <string name="image_view_image">Изображение</string>
    <string name="multi_line_txt_desc">Укажите текст заметки</string>
    <string name="btn_save_note">Сохранить</string>
    <string name="btn_del_note">Удалить</string>
    <string name="action_search">Найти</string>
    <string name="mnu_add_image">Добавить изображение</string>
    <string name="fab_edit_addimage">Добавить изображение</string>
    <string name="fab_edit_clearimage">Очистить изображение</string>
    <string name="transition_image_view">TransitionImage</string>
    <string name="insert_note">Добавляю заметку</string>
    <string name="update_note">Записываем изменения</string>
    <string name="searchQueryHint">Введите наименование для поиска</string>
    <string name="selectPictureTitle">Выберите изображение</string>
    <string name="timeAgo">назад</string>
    <string name="timeForward">вперед</string>
</resources>